<?xml version="1.0"?>
<package format="2">
  <name>px4_path_planner</name>
  <version>0.0.0</version>
  <description>px4_path_planner</description>
  <maintainer email="matthewoots@gmail.com">Matthew Woo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_sensor_msgs</build_export_depend>
  <build_export_depend>pcl</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>common_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- Helps to enable those precompiled cmake modules -->
  <build_depend>cmake_modules</build_depend>

  <export>
  </export>
</package>
